crates/batchalign-app/tests/ml_golden/snapshots/golden__coref_eng.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 660
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|test|CHI||female|||Target_Child|||
*CHI:	the dog ran .
*CHI:	it was fast .
*CHI:	the cat slept .
@End
