crates/batchalign-app/tests/ml_golden/snapshots/golden__morphotag_retokenize_eng.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 584
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	gonna eat cookies .
%mor:	adv|gonna verb|eat-Inf-S noun|cookie-Plur-Acc .
%gra:	1|2|ADVMOD 2|0|ROOT 3|2|OBJ 4|2|PUNCT
@End
