crates/batchalign-app/tests/ml_golden/snapshots/golden__translate_eng_simple.snap
---
source: crates/batchalign-app/tests/golden.rs
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	hello world .
%xtra:	hello world
@End
