crates/batchalign-app/tests/ml_golden/snapshots/golden__translate_spa_to_eng.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 690
expression: output
---
@UTF8
@Begin
@Languages:	spa
@Participants:	PAR Participant
@ID:	spa|test|PAR|||||Participant|||
*PAR:	el gato es grande .
%xtra:	the cat is big
@End
