crates/batchalign-app/tests/ml_golden/snapshots/golden__utseg_spa.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 638
expression: "&results[0].content"
---
@UTF8
@Begin
@Languages:	spa
@Participants:	PAR Participant
@ID:	spa|test|PAR|||||Participant|||
*PAR:	el perro corre .
*PAR:	me gustan los gatos .
@End
